--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafe Menu</title>
+    <title>TG26 Meny</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Menu-specific overrides and additions */
@@ -114,12 +114,12 @@
 
     <script>
         // CONFIGURATION - CHANGE THESE VALUES
-        const SHEET_ID = 'YOUR_SHEET_ID_HERE';
+        const SHEET_ID = '1JSX9yUnFdBCb2rKLJK4B_shvoQvdN5srHOHRUv-gO7o';
         const SHEET_NAME = 'Sheet1'; // Change if your sheet tab has a different name
         const HIGHLIGHT_DAY = 1; // Change this to highlight a specific day (1-8)
 
         // Construct the Google Sheets JSON API URL
-        const SHEET_URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json&sheet=${SHEET_NAME}`;
+        const SHEET_URL = `https://docs.google.com/spreadsheets/d/1JSX9yUnFdBCb2rKLJK4B_shvoQvdN5srHOHRUv-gO7o/edit?usp=sharing`;
 
         async function loadMenu() {
             try {
