--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         }
 
         .allergens::before {
-            content: "⚠️ Allergenen: ";
+            content: "⚠️ Allergen: ";
         }
 
         .loading {
@@ -169,7 +169,7 @@
             container.innerHTML = '';
 
             // Dutch days of the week
-            const daysOfWeek = ['Maandag', 'Dinsdag', 'Woensdag', 'Donderdag', 'Vrijdag', 'Zaterdag', 'Zondag', 'Maandag'];
+            const daysOfWeek = ['Mandag', 'Tirsdag', 'Onsdag', 'Torsdag', 'Fredag', 'Lørdag', 'Søndag', 'Mandag'];
 
             items.forEach(function(item) {
                 const menuItem = document.createElement('div');
