--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafe Menu</title>
+    <title>TG26 Frivilligpleie Meny</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Menu-specific overrides and additions */
@@ -104,7 +104,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Menu van de Dag</h1>
+            <h1>TG26 Frivilligpleie Meny</h1>
         </header>
         
         <div class="menu-grid">
