--- a/index.html
+++ b/index.html
@@ -8,37 +8,48 @@
     <style>
         /* Menu-specific overrides and additions */
         body {
-            padding: 20px;
+            padding: 15px;
+            overflow: hidden;
         }
 
         .container {
             max-width: 1920px;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+
+        header {
+            flex-shrink: 0;
         }
 
         header h1 {
             border-bottom: 4px solid var(--accent-color);
-            padding-bottom: 20px;
-            margin-bottom: 30px;
+            padding-bottom: 15px;
+            margin-bottom: 20px;
+            font-size: 2.5em;
         }
 
         .menu-grid {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             grid-template-rows: repeat(4, 1fr);
-            gap: 20px;
-            min-height: calc(100vh - 200px);
+            gap: 15px;
+            flex: 1;
+            overflow: hidden;
         }
 
         .menu-item {
             background-color: var(--card-bg);
             border: 3px solid #4a4a4a;
             border-radius: 10px;
-            padding: 25px;
+            padding: 20px;
             transition: all 0.3s ease;
             display: flex;
             flex-direction: column;
             justify-content: center;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            overflow: hidden;
         }
 
         .menu-item.highlighted {
@@ -50,34 +61,34 @@
 
         .day-label {
             color: var(--accent-color);
-            font-size: 1em;
+            font-size: 0.9em;
             font-weight: bold;
-            margin-bottom: 10px;
+            margin-bottom: 8px;
             text-transform: uppercase;
             letter-spacing: 1px;
         }
 
         .dish-name {
             color: var(--primary-color);
-            font-size: 1.8em;
+            font-size: 1.5em;
             font-weight: bold;
-            margin-bottom: 12px;
+            margin-bottom: 10px;
             line-height: 1.2;
         }
 
         .ingredients {
             color: #e0e0e0;
-            font-size: 1.1em;
-            margin-bottom: 10px;
-            line-height: 1.5;
+            font-size: 0.95em;
+            margin-bottom: 8px;
+            line-height: 1.4;
         }
 
         .allergens {
             color: #ff6b6b;
-            font-size: 0.95em;
+            font-size: 0.85em;
             font-weight: bold;
             margin-top: auto;
-            padding-top: 10px;
+            padding-top: 8px;
             border-top: 2px solid var(--accent-color);
         }
 
@@ -96,7 +107,7 @@
         @media (max-width: 1200px) {
             .menu-grid {
                 grid-template-columns: 1fr;
-                grid-template-rows: auto;
+                grid-template-rows: repeat(8, 1fr);
             }
         }
     </style>
@@ -108,7 +119,7 @@
         </header>
         
         <div class="menu-grid">
-            <div class="loading">Menu laden...</div>
+            <div class="loading">Laster meny...</div>
         </div>
     </div>
 
@@ -159,7 +170,7 @@
             } catch (error) {
                 const container = document.querySelector('.menu-grid');
                 container.innerHTML = 
-                    '<div class="loading" style="color: #ff6b6b;">Fout bij het laden van het menu.</div>';
+                    '<div class="loading" style="color: #ff6b6b;">Feil ved lasting av meny.</div>';
                 console.error('Error:', error);
             }
         }
@@ -168,7 +179,7 @@
             const container = document.querySelector('.menu-grid');
             container.innerHTML = '';
 
-            // Dutch days of the week
+            // Norwegian days of the week
             const daysOfWeek = ['Mandag', 'Tirsdag', 'Onsdag', 'Torsdag', 'Fredag', 'Lørdag', 'Søndag', 'Mandag'];
 
             items.forEach(function(item) {
