--- a/en.html
+++ b/en.html
@@ -163,12 +163,36 @@
                 font-size: 1.4em;
             }
         }
+        /* Simple flag language switcher */
+header { position: relative; }
+.lang-flag {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 1.6rem;
+    line-height: 1;
+    text-decoration: none;
+    padding: 6px 8px;
+    transition: transform 0.2s ease;
+}
+.lang-flag:hover { transform: scale(1.08); }
+
+@media (max-width: 768px) {
+    .lang-flag {
+        position: static;
+        display: block;
+        width: max-content;
+        margin: 10px auto 0;
+    }
+}
+
     </style>
 </head>
 <body>
     <div class="container">
         <header>
             <h1>TG26 Volunteer Care Menu</h1>
+            <a href="https://kanrog.github.io/tg_menu/" class="lang-flag" aria-label="Vis på norsk">🇳🇴</a>
         </header>
         
         <div class="menu-grid">
