--- a/en.html
+++ b/en.html
@@ -163,19 +163,20 @@
                 font-size: 1.4em;
             }
         }
-        /* Simple flag language switcher */
+/* Simple flag language switcher */
 header { position: relative; }
 .lang-flag {
     position: absolute;
     top: 0;
     right: 0;
-    font-size: 1.6rem;
+    font-size: 2rem;
     line-height: 1;
     text-decoration: none;
-    padding: 6px 8px;
+    padding: 8px 12px;
     transition: transform 0.2s ease;
+    font-family: "Segoe UI Emoji", "Apple Color Emoji", "Noto Color Emoji", sans-serif;
 }
-.lang-flag:hover { transform: scale(1.08); }
+.lang-flag:hover { transform: scale(1.15); }
 
 @media (max-width: 768px) {
     .lang-flag {
