--- a/en.html
+++ b/en.html
@@ -191,10 +191,11 @@ header { position: relative; }
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>TG26 Volunteer Care Menu</h1>
-            <a href="https://kanrog.github.io/tg_menu/" class="lang-flag" aria-label="Vis på norsk">🇳🇴</a>
-        </header>
+            <header>
+              <h1>TG26 Volunteer Care Menu</h1>
+              <a href="https://kanrog.github.io/tg_menu/" class="lang-flag" aria-label="Vis på norsk">🇳🇴</a>
+              <a href="https://kanrog.github.io/tg_menu/de" class="lang-flag" aria-label="Auf Deutsch anzeigen">🇩🇪</a>
+            </header>
         
         <div class="menu-grid">
             <div class="loading">Loading menu...</div>
