--- a/index.html
+++ b/index.html
@@ -198,10 +198,11 @@ header { position: relative; }
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>TG26 Frivilligpleie Meny</h1>
-            <a href="https://kanrog.github.io/tg_menu/en" class="lang-flag" aria-label="View in English">🇬🇧</a>
-        </header>
+            <header>
+              <h1>TG26 Frivilligpleie Meny</h1>
+              <a href="https://kanrog.github.io/tg_menu/en" class="lang-flag" aria-label="View in English">🇬🇧</a>
+              <a href="https://kanrog.github.io/tg_menu/de" class="lang-flag" aria-label="Auf Deutsch anzeigen">🇩🇪</a>
+            </header>
         
         <div class="menu-grid">
             <div class="loading">Laster meny...</div>
