--- a/de.html
+++ b/de.html
@@ -191,11 +191,12 @@ header { position: relative; }
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>TG26 Freiwilligenpflege Menü</h1>
-            <a href="https://kanrog.github.io/tg_menu/" class="lang-flag" aria-label="Auf Norwegisch anzeigen">🇳🇴</a>
-        </header>
-        
+            <header>
+              <h1>TG26 Freiwilligenpflege Menü</h1>
+              <a href="https://kanrog.github.io/tg_menu/" class="lang-flag" aria-label="Auf Norwegisch anzeigen">🇳🇴</a>
+              <a href="https://kanrog.github.io/tg_menu/en" class="lang-flag" aria-label="View in English">🇬🇧</a>
+            </header>
+   
         <div class="menu-grid">
             <div class="loading">Menü wird geladen...</div>
         </div>
