--- a/index.html
+++ b/index.html
@@ -220,10 +220,14 @@ header {
     <div class="container">
             <header>
               <h1>TG26 Frivilligpleie Meny</h1>
-              <a href="https://kanrog.github.io/tg_menu/en" class="lang-flag" aria-label="View in English">🇬🇧</a>
-              <a href="https://kanrog.github.io/tg_menu/de" class="lang-flag" aria-label="Auf Deutsch anzeigen">🇩🇪</a>
+              <a href="https://kanrog.github.io/tg_menu/en" class="lang-flag" aria-label="View in English">
+                <img src="https://flagcdn.com/w40/gb.png" alt="English" width="32" height="24">
+              </a>
+              <a href="https://kanrog.github.io/tg_menu/de" class="lang-flag" aria-label="Auf Deutsch anzeigen">
+                <img src="https://flagcdn.com/w40/de.png" alt="Deutsch" width="32" height="24">
+              </a>
             </header>
-        
+
         <div class="menu-grid">
             <div class="loading">Laster meny...</div>
         </div>
