--- a/en.html
+++ b/en.html
@@ -213,10 +213,14 @@ header {
     <div class="container">
             <header>
               <h1>TG26 Volunteer Care Menu</h1>
-              <a href="https://kanrog.github.io/tg_menu/" class="lang-flag" aria-label="Vis på norsk">🇳🇴</a>
-              <a href="https://kanrog.github.io/tg_menu/de" class="lang-flag" aria-label="Auf Deutsch anzeigen">🇩🇪</a>
+              <a href="https://kanrog.github.io/tg_menu/" class="lang-flag" aria-label="Vis på norsk">
+                <img src="https://flagcdn.com/w40/no.png" alt="Norsk" width="32" height="24">
+              </a>
+              <a href="https://kanrog.github.io/tg_menu/de" class="lang-flag" aria-label="Auf Deutsch anzeigen">
+                <img src="https://flagcdn.com/w40/de.png" alt="Deutsch" width="32" height="24">
+              </a>
             </header>
-        
+
         <div class="menu-grid">
             <div class="loading">Loading menu...</div>
         </div>
