--- a/de.html
+++ b/de.html
@@ -213,8 +213,12 @@ header {
     <div class="container">
             <header>
               <h1>TG26 Freiwilligenpflege Menü</h1>
-              <a href="https://kanrog.github.io/tg_menu/" class="lang-flag" aria-label="Auf Norwegisch anzeigen">🇳🇴</a>
-              <a href="https://kanrog.github.io/tg_menu/en" class="lang-flag" aria-label="View in English">🇬🇧</a>
+              <a href="https://kanrog.github.io/tg_menu/" class="lang-flag" aria-label="Auf Norwegisch anzeigen">
+                <img src="https://flagcdn.com/w40/no.png" alt="Norsk" width="32" height="24">
+              </a>
+              <a href="https://kanrog.github.io/tg_menu/en" class="lang-flag" aria-label="View in English">
+                <img src="https://flagcdn.com/w40/gb.png" alt="English" width="32" height="24">
+              </a>
             </header>
    
         <div class="menu-grid">
